# ai-learning

./: .gitignore  README.md
specs/weak1/: 0001-spec.md  0002-implementation-plan.md
specs/week1/: 0001-spec.md  0002-implementation-plan.md  instructions.md
specs/week2/: 0001-需求分析与设计.md  0002-实现计划.md  instructions.md
weak1/: .editorconfig  .gitignore  LICENSE  README.md
weak1/database/: init.sql
weak1/frontend/: .env.example
week1/: .env.docker.example  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml
week1/backend/: .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  docker-entrypoint.sh  pyproject.toml
week1/backend/alembic/: env.py
week1/backend/alembic/versions/: 2026_05_17_1730-6f9c1a8e0b21_init_tickets.py
week1/backend/app/: __init__.py  main.py
week1/backend/app/api/: __init__.py  deps.py  health.py
week1/backend/app/api/v1/: __init__.py  _query_utils.py  aggregations.py  tickets.py
week1/backend/app/core/: __init__.py  config.py  constants.py  database.py  exceptions.py  logging.py
week1/backend/app/middlewares/: cors.py  error_handler.py
week1/backend/app/models/: __init__.py  ticket.py
week1/backend/app/schemas/: __init__.py  common.py  ticket.py
week1/backend/app/services/: aggregation_service.py  ticket_service.py
week1/backend/app/utils/: responses.py
week1/backend/scripts/: __init__.py  perf_benchmark.py
week1/backend/tests/: conftest.py  test_health.py
week1/backend/tests/integration/: test_aggregations_api.py  test_ticket_api.py  test_ticket_list_api.py
week1/backend/tests/unit/: test_list_query.py  test_ticket_schema.py  test_ticket_service.py  test_ticket_service_list.py
week1/database/: init.sql
week1/database/seeds/: seed.sql
week1/docs/: DEPLOYMENT.md  INTEGRATION-CHECKLIST.md  QUALITY-REPORT.md  backend-analysis.md  frontend-analysis.md
week1/frontend/: .dockerignore  Dockerfile  README.md  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  playwright.config.ts  tsconfig.app.json  tsconfig.e2e.json  vite.config.ts
week1/frontend/e2e/: crud.spec.ts  fixtures.ts  list.spec.ts
week1/frontend/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
week1/frontend/src/__tests__/: smoke.test.tsx
week1/frontend/src/api/: aggregations.ts  api.test.ts  request.test.ts  request.ts  tickets.ts
week1/frontend/src/components/ConfirmDialog/: ConfirmDialog.test.tsx  ConfirmDialog.tsx
week1/frontend/src/components/EmptyState/: EmptyState.tsx
week1/frontend/src/components/Header/: Header.test.tsx  Header.tsx
week1/frontend/src/components/Layout/: Layout.tsx
week1/frontend/src/components/Modal/: Modal.test.tsx  Modal.tsx
week1/frontend/src/components/SearchBar/: SearchBar.test.tsx  SearchBar.tsx
week1/frontend/src/components/Sidebar/: AssigneeFilter.tsx  PriorityFilter.test.tsx  PriorityFilter.tsx  Sidebar.tsx  StatusFilter.test.tsx  StatusFilter.tsx  TagFilter.tsx
week1/frontend/src/components/Skeleton/: TableSkeleton.tsx
week1/frontend/src/components/TicketDetail/: StatusSelect.test.tsx  StatusSelect.tsx
week1/frontend/src/components/TicketForm/: PriorityRadio.test.tsx  PriorityRadio.tsx  TagInput.test.tsx  TagInput.tsx  TicketForm.tsx
week1/frontend/src/components/TicketTable/: Pagination.test.tsx  Pagination.tsx  PriorityBadge.tsx  SortBar.test.tsx  SortBar.tsx  StatusBadge.tsx  TicketTable.test.tsx  TicketTable.tsx
week1/frontend/src/components/Toast/: ErrorToast.test.tsx  ErrorToast.tsx  Toast.tsx  ToastContext.ts  ToastProvider.test.tsx  ToastProvider.tsx  useToast.ts
week1/frontend/src/constants/: enums.ts
week1/frontend/src/hooks/: useAssignees.ts  useDebouncedValue.test.ts  useDebouncedValue.ts  useTags.ts  useTicket.test.ts  useTicket.ts  useTicketListUrlState.test.tsx  useTicketListUrlState.ts  useTickets.test.ts  useTickets.ts
week1/frontend/src/lib/: cn.ts  format.test.ts  format.ts  queryString.test.ts  queryString.ts
week1/frontend/src/mocks/: browser.ts  handlers.ts
week1/frontend/src/pages/NotFoundPage/: index.tsx
week1/frontend/src/pages/TicketDetailPage/: index.tsx
week1/frontend/src/pages/TicketListPage/: index.tsx
week1/frontend/src/types/: api.ts  ticket.ts
week1/tools/: integration-check.sh
week2/backend/: .env.example  Cargo.toml  config.yaml
week2/backend/migrations/: 001_initial_schema.sql  002_enable_pgvector.sql
week2/backend/src/: config.rs  error.rs  lib.rs  main.rs  state.rs
week2/backend/src/api/: auth.rs  charts.rs  connections.rs  conversations.rs  extractors.rs  metrics.rs  mod.rs  routes.rs  sql_execute.rs  users.rs
week2/backend/src/middleware/: auth.rs  error_handler.rs  logging.rs  mod.rs
week2/backend/src/models/: connection.rs  conversation.rs  metric.rs  mod.rs  query.rs  semantic.rs  user.rs
week2/backend/src/repositories/: audit_repo.rs  connection_repo.rs  conversation_repo.rs  metric_repo.rs  mod.rs  query_repo.rs  semantic_repo.rs  user_repo.rs
week2/backend/src/services/: auth_service.rs  chart_generator.rs  connection_manager.rs  data_masker.rs  llm_client.rs  mod.rs  schema_retrieval.rs  sql_analyzer.rs  sql_executor.rs
week2/backend/src/utils/: jwt.rs  mod.rs  password.rs  validation.rs
week2/docs/: PROGRESS.md  代码验收文档.md
week2/frontend/: index.html  package-lock.json  package.json
week2/frontend/src/: App.tsx  index.css
week2/frontend/src/api/: auth.ts  client.ts
week2/frontend/src/components/Chart/: ChartRenderer.tsx  index.ts
week2/frontend/src/components/Common/: Button.tsx  Modal.tsx  Table.tsx  index.ts
week2/frontend/src/components/Connection/: ConnectionPanel.tsx
week2/frontend/src/components/Editor/: SqlEditor.tsx  index.ts
week2/frontend/src/components/Layout/: MainLayout.tsx
week2/frontend/src/hooks/: index.ts  useChart.ts  useNlConvert.ts  useSqlExecute.ts
week2/frontend/src/pages/: ChatWorkspacePage.tsx  Dashboard.tsx  Login.tsx  LoginPage.tsx  SqlWorkspacePage.tsx
week2/frontend/src/pages/Admin/: AuditLog.tsx  (+3 more)
week2/frontend/src/stores/: authStore.ts  chatStore.ts  connectionStore.ts
week2/frontend/src/types/: api.ts
(+3 files in other folders)
