[project]
name = "project-alpha-backend"
version = "0.1.0"
description = "ProjectAlpha 后端 - 轻量级 Ticket 管理工具 API"
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }
authors = [{ name = "ProjectAlpha Contributors" }]

dependencies = [
    "fastapi>=0.136.1",
    "uvicorn[standard]>=0.47.0",
    "sqlalchemy>=2.0.49",
    "alembic>=1.18.4",
    "pymysql>=1.1.3",
    "cryptography>=44.0.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "python-dotenv>=1.2.2",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "httpx>=0.28.1",
    "ruff>=0.15.13",
    "black>=26.5.0",
    "mypy>=2.1.0",
]

# =========================
# Ruff: lint + format
# =========================
[tool.ruff]
line-length = 100
target-version = "py313"
src = ["app", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "C90", # mccabe complexity
    "N",   # pep8-naming
]
ignore = [
    "E501", # line length - 由 black/ruff format 处理
    "B008", # FastAPI Depends() 用作默认参数是惯用法
    "N818", # 业务异常基类 BusinessException 保留，不强制 Error 后缀
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# =========================
# Black
# =========================
[tool.black]
line-length = 100
target-version = ["py313"]

# =========================
# Mypy
# =========================
[tool.mypy]
python_version = "3.13"
strict = true
plugins = ["pydantic.mypy"]
exclude = ["alembic/versions"]

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false

# =========================
# Pytest
# =========================
[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
]

# =========================
# Coverage
# =========================
[tool.coverage.run]
source = ["app"]
omit = ["app/__init__.py", "alembic/*"]

[tool.coverage.report]
show_missing = true
skip_covered = false

# =========================
# uv 工作区配置
# =========================
[tool.uv]
package = false
