[package]
name = "smartquery-backend"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "SmartQuery AI - 智能双模数据库查询与分析系统后端"
authors = ["SmartQuery Team"]
license = "MIT"

[dependencies]
# ==================== Web框架 ====================
axum = "0.8.9"
tower = "0.5.3"
tower-http = { version = "0.6", features = ["cors", "trace", "compression-gzip"] }

# ==================== 异步运行时 ====================
tokio = { version = "1.52.3", features = ["full"] }

# ==================== 数据库 ====================
sqlx = { version = "0.9", features = ["runtime-tokio-native-tls", "postgres", "uuid", "chrono", "json", "tls"] }

# ==================== HTTP客户端 ====================
reqwest = { version = "0.13", features = ["json"] }

# ==================== 序列化 ====================
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# ==================== SQL解析 ====================
sqlparser = "0.62"

# ==================== JWT认证 ====================
jsonwebtoken = { version = "10.4", features = ["aws_lc_rs"] }
argon2 = "0.5"

# ==================== 配置 ====================
config = "0.14"

# ==================== 日志 ====================
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# ==================== 验证 ====================
validator = { version = "0.20", features = ["derive"] }

# ==================== 日期时间 ====================
chrono = { version = "0.4", features = ["serde"] }

# ==================== UUID ====================
uuid = { version = "1.23", features = ["v4", "serde"] }

# ==================== 错误处理 ====================
thiserror = "2.0"
anyhow = "1.0"

# ==================== 工具库 ====================
once_cell = "1"
rust_decimal = { version = "1.33", features = ["serde", "serde-with-str"] }
base64 = "0.22"
sha2 = "0.10"
hmac = "0.12"

# ==================== 异步工具 ====================
futures = "0.3"
async-trait = "0.1"

[dev-dependencies]
# 测试
tokio-test = "0.4"
tower = { version = "0.5", features = ["util"] }
hyper = "1.5"

# Mock
mockall = "0.13"

# 断言
pretty_assertions = "1.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0
debug = true
