[package]
name = "smartquery-backend"
version = "0.1.0"
edition = "2021"
rust-version = "1.81"
description = "SmartQuery AI - 智能双模数据库查询与分析系统后端"
authors = ["SmartQuery Team"]
license = "MIT"

[dependencies]
# ==================== Web框架 ====================
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "compression-gzip", "fs"] }

# ==================== 异步运行时 ====================
tokio = { version = "1.42", features = ["full"] }

# ==================== 数据库 ====================
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "mysql", "sqlite", "any", "uuid", "chrono", "json"] }

# ==================== Redis ====================
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }

# ==================== HTTP客户端 ====================
reqwest = { version = "0.12", features = ["json"] }

# ==================== 序列化 ====================
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# ==================== SQL解析 ====================
sqlparser = "0.56"

# ==================== JWT认证 ====================
jsonwebtoken = "9"
argon2 = "0.5"

# ==================== 配置 ====================
config = "0.15"

# ==================== 日志 ====================
tracing = "0.1"
tracing-subscriber = { version = "0.1", features = ["fmt", "env-filter"] }

# ==================== 验证 ====================
validator = { version = "0.18", features = ["derive"] }

# ==================== 日期时间 ====================
chrono = { version = "0.4", features = ["serde"] }

# ==================== UUID ====================
uuid = { version = "1.11", features = ["v4", "serde"] }

# ==================== 错误处理 ====================
thiserror = "2.0"
anyhow = "1.0"

# ==================== 工具库 ====================
once_cell = "1"
rust_decimal = { version = "1.36", features = ["serde", "serde-with-str"] }
base64 = "0.22"
sha2 = "0.10"
hmac = "0.12"
regex = "1.10"
dotenvy = "0.15"
lazy_static = "1.4"

# ==================== 异步工具 ====================
futures = "0.3"
async-trait = "0.1"

[dev-dependencies]
# 测试
tokio-test = "0.4"
tower = { version = "0.5", features = ["util"] }

# Mock
mockall = "0.13"

# 断言
pretty_assertions = "1.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0
debug = true
